--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/*.h5ad filter=lfs diff=lfs merge=lfs -text
 data/t1d_example.h5ad filter=lfs diff=lfs merge=lfs -text
+data/Simu1_SeuratObj.rds filter=lfs diff=lfs merge=lfs -text
